[package]
name = "binja-py27"
version = "0.1.0"
authors = ["landaire <lander@conficker.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
binaryninja = { git = "https://github.com/Vector35/binaryninja-api", branch = "dev", features = ["rayon"] }
py-marshal = { git = "https://github.com/landaire/py-marshal.git", features = ["python27"] }
pydis = "0.3"
log = "0.4"
rayon = "1"

[lib]
crate-type = ["cdylib"]

[profile.release]
panic = "abort"
lto = true

[patch.'https://github.com/Vector35/binaryninja-api']
binaryninja = { path = "../../src/binaryninja-api/rust", features = ["rayon"] }